--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Selamat Milad Nur Azis</title>
+    <title>Selamat Milad SHAFIRA</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
@@ -19,7 +19,7 @@
             <div class="col-md-6">
                 <div class="ajis-image">
                     <img class="ajis" src="asis.jpeg" alt="">
-                    <h1 class="text-center mt-4 nama">SHAFIRA </h1>
+                    <h1 class="text-center mt-4 nama">SHAFIRA</h1>
                     <h6 class="text-center mt-2 nama">20-DES-1999</h6>
                 </div>
                 <div class="gambar-kue">
