--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="nama text-center mt-6" style="text-decoration:underline;">Panjang Umur & Sukses Sahabat</h1>
+        <h1 class="nama text-center mt-6" style="text-decoration:underline;">Panjang Umur & Sukses Sayang</h1>
     </div>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
