--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="ajis-image">
-                    <img class="ajis" src="asis.jpeg" alt="">
-                    <h1 class="text-center mt-4 nama">SHAFIRA</h1>
-                    <h6 class="text-center mt-2 nama">20-DES-1999</h6>
+                    <img class="ajis" src="asiss.jpeg" alt="">
+                    <h1 class="text-center mt-4 nama">Nia Mutia Dina</h1>
+                    <!-- <h6 class="text-center mt-2 nama">20-DES-1999</h6> -->
                 </div>
                 <div class="gambar-kue">
 
@@ -30,7 +30,9 @@
                 <div class="container">
                     <div class="box">
                         <h1 class="nama text-dibox">Selamat Ulang Tahun Kekasihku</h1>
-                        <b class="nama ucapan">Selama mentari masih mampu terbit dan tenggelam. Selama itu pula aku akan bangga menjadi kekasihmu. Selamat ulang tahun ya pacarku, sekarang, nanti, besok, sampai kapanpun, semoga kita senantiasa bersama. Sekali lagi met ultah pacarku</b>
+                        <b class="nama ucapan">Happy BirthDay Best Sister ❤
+                            Lupakan seberapa lama kamu telah hidup tapi lihatlah seberapa banyak hal yang telah kamu gapai. Harapan saya semoga kamu bisa mencapai sebuah kesuksesan yang belum pernah kaubayangkan sebelumnya. jadilah manusia yang pandai memsyukuri segala nikmat dan karuniaNya.
+                            dari Saudara Laki-lakimu 'Roy Rizqun Nada'</b>
                     </div>
                 </div>
             </div>
